# Study

./: CMakeLists.txt
ps3/: CMakeLists.txt  isolation.c  main.c
ps_4/: CMakeLists.txt  ballsortpuzzle.c  c4.c  main  main.c  qr  qr.c
ps_7/: CMakeLists.txt  bpm.c  count_words  count_words.c  every_second  every_second.c  input.txt  main.c  output.txt  playfair.c
temp/: ballsortpuzzle.c
